--- a/Style.CSS
+++ b/Style.CSS
@@ -1,5 +1,4 @@
-#H{background-color:rgb(239,228,176);height: 105PX;width:99.70%;
-position:sticky;
+#H{background-color:rgb(239,228,176);height: 105PX;width:100%;
 top:0;
 border-color:rgb(141,109,62);
 border-style: solid;
@@ -182,7 +181,7 @@ border-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 650px;
+    height: 600px;
 }
 .contact-form {
     background:  rgb(252, 242, 192);
@@ -191,8 +190,8 @@ border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 650px;
 }
-.contact-form h2 {
-    text-align: center;
+.contact-form label {
+    margin-left: 32%;
     margin-bottom: 20px;
     color: rgb(141,109,62);
     font-size: xx-large;
@@ -216,7 +215,7 @@ border-radius: 20px;
 
 
 .contact-form button {
-margin-left: 280px;
+margin-left: 40%;
     padding-top: 10px;
     padding-left: 15px;
     padding-bottom: 10px;
@@ -249,49 +248,18 @@ margin-left: 280px;
 {
    background-color:rgba(97, 61, 6, 0.959);
    color: rgb(239,228,176);
-   padding-top: 10px;
+
+
     
 }
-#L
-{
-    background-color: rgb(20, 160, 78, 0.815);
-    color: aliceblue;
-    margin-top: 10PX;
-    margin-left: 25px;
-}
-#M{
-    background-color: black;
-    color: aliceblue;
-    
-}
-#M:HOVER{
-    color: rgb(238, 123, 29);
-}
-#N{
-    display: flex;
-    list-style-type: none;
-    margin-left: 40%;
-}
-#O{
-    background-color: rgba(20, 160, 78, 0.815);
-    border: 2px solid rgb(243, 240, 240);width: fit-content;
-    height: 25px;padding-top: 6px;
-}
-#P
-{
-    text-decoration: none;
-    color: aliceblue;
-    margin-left: 30PX;
-    font-weight: bold;
-    font-size: larger;
-}
-#P:HOVER{
-    color: rgb(238, 123, 29);
-}
+
+
 #Q{
     width: 250px;
-    margin-left: 5%;
+    margin-left: 5%;  
+   
 }
+
 #R{
     display:flex;   
 }
@@ -314,6 +282,9 @@ margin-left: 280px;
 #U li{
     list-style-type: none;
     
+}
+#U li a {
+    margin-left: 50px;
 }
 #W{
     margin-left: 5%;
@@ -339,12 +310,14 @@ margin-bottom: 0PX;
     margin-left: 10PX;
 }
 #XX1{
-    margin-left: 25PX;
+    margin-left: 60PX;
     list-style-type: none;
+    margin-top: 10px;
 }
 #XX2{
     margin-left: 50pX;
     list-style-type: none;
+    margin-top: 10px;
 }
 
 #xx22 {
@@ -355,6 +328,7 @@ margin-bottom: 0PX;
 }
 #xx23 {
     display: inline-block;
+    margin-left: 5px;
     
     
 }
@@ -374,4 +348,6 @@ margin-bottom: 0PX;
 }
 #C1{
     margin-left: 40%;
+    margin-top: 1%;
+    padding-bottom: 20px;
 }
